packages/jsii/test/negatives/neg.internal-underscore-interface.4.ts
export class MyClass {
  public _methodWithUnderscoreButNoInternal() {
    return;
  }
}
